# 标题
cmake_minimum_required(VERSION 3.10.0)
project(SDLshooter VERSION 0.1.0 LANGUAGES C CXX)

# 设置c++标准
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# 设置编译选项
if(MSVC)
    add_compile_options(/W4)
else()
    add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# 设置编译输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR})

set(TARGET ${PROJECT_NAME}-${CMAKE_SYSTEM_NAME})

# 查找并载入cmake预设
find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)

# 添加可执行文件
add_executable(${TARGET} main.cpp)

# 链接
# mac下不需要SDL2main, windows下需要sdl2main
target_link_libraries(${TARGET} ${SDL2_LIBRARIES} SDL2_image::SDL2_image)